fixed bugs, added counter, collapses, players and positions

--- a/style.css
+++ b/style.css
@@ -8,8 +8,7 @@ h1{
     margin-top: 3%;
 }
 #canvas {
-    border:1px solid #d3d3d3;
-    background-color: rgb(165, 196, 125);
+    border:2px solid #d3d3d3;
     align-items: center;
 }
 
@@ -25,3 +24,95 @@ h1{
     margin: 4px 2px;
     cursor: pointer;
 }
+
+.site-footer{
+    background-color:#26272b;
+    padding:24px 0 25px;
+    font-size:15px;
+    line-height: 2.5rem;
+    color:#737373;
+    position: absolute;
+    bottom:0;
+    left: 0;
+    width: 100%;
+    color: white;
+    text-align: center;
+    padding-bottom: 4px;
+    padding-top: 4px;
+}
+
+.site-footer .social-icons a
+{
+  width:40px;
+  height:40px;
+  margin-left:6px;
+  margin-right:0;
+  border-radius:100%;
+  background-color:#33353d
+}
+
+.social-icons
+{
+  padding-left:0;
+  margin-bottom:0;
+  list-style:none
+}
+.social-icons li
+{
+  display:inline-block;
+  margin-bottom:4px
+}
+.social-icons li.title
+{
+  margin-right:15px;
+  color:#96a2b2;
+  font-weight:700;
+  font-size:13px
+}
+.social-icons a{
+  background-color:#eceeef;
+  color:#818a91;
+  font-size:16px;
+  display:inline-block;
+  line-height:44px;
+  width:44px;
+  height:44px;
+  text-align:center;
+  margin-right:8px;
+  border-radius:100%;
+  -webkit-transition:all .2s linear;
+  -o-transition:all .2s linear;
+  transition:all .2s linear
+}
+.social-icons a:active,.social-icons a:focus,.social-icons a:hover
+{
+  color:#fff;
+  background-color:#29aafe
+}
+.social-icons.size-sm a
+{
+  line-height:34px;
+  height:34px;
+  width:34px;
+  font-size:14px
+}
+
+.social-icons a.twitter:hover
+{
+  background-color:#00aced
+}
+.social-icons a.linkedin:hover
+{
+  background-color:#007bb6
+}
+
+@media (max-width:767px)
+{
+  .social-icons li.title
+  {
+    display:block;
+    margin-right:0;
+    font-weight:600
+  }
+}
+
